[workspace]
resolver = "2"
members = ["drakermore-server"]

[workspace.dependencies]
is_none_or = "0.1.0"                                                     # REMOVE THIS WHEN RUSTC 1.82.0 IS RELEASED!!!
futures = "0.3.30"
log = "0.4.22"
lazy-regex = "3.3.0"
thiserror = "1.0.64"
serde = { version = "1.0.210", features = ["derive"] }
axum = "0.7.7"
tracing-subscriber = "0.3.18"
tokio = { version = "1.40.0", features = ["rt", "net", "macros", "fs"] }
toml = "0.8.19"
mime = "0.3.16"
zip = "2.2.0"
bytes = "1.7.2"
anyhow = "1.0.89"
url_encor = "1.0.2"


# CLI tools
bpaf = { version = "0.9.14", features = ["bpaf_derive"] }
color-eyre = "0.6.3"
