[package]
name = "drakermore-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy-regex = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bpaf = { workspace = true }
toml = { workspace = true }
mime = { workspace = true }
zip = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
url_encor = { workspace = true }
